# Hermes

./: README.md  activate_hermes.sh  pyproject.toml
notebooks/: binance_btcusdt_minute.ipynb  datalake.ipynb  exploration.ipynb  telechargement_public_data.ipynb  test_client_api_key.ipynb
notebooks/data/datalake/: datalake_bronze.ipynb  datalake_gold.ipynb  feature_store_test.ipynb
notebooks/data/datalake/tests/: test_bronze_completeness_partitions.ipynb  test_gold_features_consistency.ipynb  test_process_file_integration.ipynb
notebooks/data/strategies/: strategy_chunked_backtesting.ipynb  trading_strategy_SmartMomentum.ipynb
notebooks/data/strategies/gold/strategies/gold_strategy_smart_momentum/: strategy_chunked.ipynb  strategy_chunked_backtesting.ipynb
src/hermes/: __init__.py
