[tool.poetry]
name = "hermes"
version = "0.1.0"
description = "Laboratoire d'exploration de stratégies de trading quantitatif"
authors = ["Ton Nom <ton.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
jupyter = "^1.1.1"
pandas = "^2.3.2"
numpy = ">=1.24,<2.3"
matplotlib = "^3.10.6"
python-binance = "^1.0.29"
tqdm = "^4.67.1"
pykeepass = "^4.1.1.post1"
hvac = "^2.3.0"
polars = "^1.33.1"
duckdb = "^1.3.2"
pyarrow = "^21.0.0"
minio = "^7.2.16"
fsspec = "^2025.9.0"
s3fs = "^2025.9.0"
fastparquet = "^2024.11.0"
ta-lib = "^0.6.7"
pandas-ta = "^0.4.71b0"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"