[tool.poetry]
name = "hermes"
version = "0.1.0"
description = "Laboratoire d'exploration de stratégies de trading quantitatif"
authors = ["Ton Nom <ton.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
jupyter = "^1.1.1"
pandas = "^2.0.0"
numpy = ">=1.21,<1.25"
matplotlib = "^3.7.0"
python-binance = "^1.0.29"
tqdm = "^4.67.1"
pykeepass = "^4.1.1.post1"
hvac = "^2.3.0"
polars = "^0.20.0"
duckdb = "^0.9.0"
pyarrow = "^14.0.0"
minio = "^7.2.16"
fsspec = "^2023.12.0"
s3fs = "^2023.12.0"
fastparquet = "^2023.10.0"
# ta-lib = "^0.4.28"  # Temporairement commenté - problème de compilation
seaborn = "^0.12.0"
# Dépendances pour backtesting avancé
scipy = "^1.11.0"
plotly = "^5.17.0"
# VectorBT pour backtesting professionnel
vectorbt = "^0.25.4"
numba = ">=0.56.0,<0.60.0"
ta-lib = "^0.6.7"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"